2006-12-25  Jan Schampera <jan.schampera@unix.net>

	* src/gui/contacts.cpp:
	Fix unneeded assertion.

	* src/gui/callshistory.cpp:
	Add "chat" to the context menu (#358830), also some icons.

2006-12-25  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Made avahi really optional (bug #354592), patch from
	adam at yggdrasil.com.

2006-12-24  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp:
	Let the shortcut Ctrl-L focus+mark the URL bar entry.
	Implements ENH #342241.

2006-12-21  Jan Schampera <jan.schampera@unix.net>

	* pixmaps/message.png, pixmaps/remote_contact.png:
	Changed to polished versions. Thanks a lot to vdepizzol (sorry,
	realname unknown)!

	* NEWS:
	Updated.

2006-12-17  Jan Schampera <jan.schampera@unix.net>

	* pixmaps/ekiga-16.png:
	Removed.

	* pixmaps/ekiga.png:
	Changed (copy of ekiga_logo_48x48.png).

	* pixmaps/ekiga_logo_16x16.png, pixmaps/ekiga_logo_22x22.png,
	pixmaps/ekiga_logo_32x32.png, pixmaps/ekiga_logo_48x48.png:
	Added (new icon set from Vinicius Depizzol, thanks alot!).

	* pixmaps/Makefile.am, lib/gui/gmstockicons.h, lib/gui/gmstockicons.c:
	Changed to support new icon set.

	* src/gui/chat.cpp, src/gui/druid.cpp, src/gui/history.cpp,
	src/gui/main.cpp, src/gui/tools.cpp:
	Changed to use new icon as WM-icon.

	* NEWS, AUTHORS:
	Updated.

2006-12-07  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp: Fix crash on closing main window (#382366)

2006-12-03  Damien Sandras  <dsandras@gnome.org>

	* Tagged and branched : H_Release. The H_Release is the stable
	part of CVS HEAD.

2006-11-28  Damien Sandras  <dsandras@gnome.org>

	* lib/gui/gmroster.cpp: Fixed possible crash.

2006-11-28  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/ekiga.cpp:
	Fixed variable clash with mingw.

2006-11-27  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/pcss.cpp, src/endpoints/pcss.h:
	Only play the dial tone when receiving a 180 Ringing response 
	with SIP.