@@ -1,3 +1,8 @@
+2006-12-26  Julien Puydt  <jpuydt@free.fr>
+
+	* src/gui/druid.cpp: Protected access to the kind of net store, to
+	avoid crashes. Fixes #389775.
+
 2006-12-25  Jan Schampera <jan.schampera@unix.net>
 
 	* src/gui/contacts.cpp:
